fix pattern alignment on other pages

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,4 +1,8 @@
 #about-page {
+    @media (min-width: 851px) {
+        --pattern-height: 5;
+    }
+
     .content-wrapper {
         h2 {
             margin-block-start: 0;
